airshift -fixed alignment problem of download page section

--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -407,7 +407,7 @@ p {
   .download-text {
     color: $color-gray-dark-1;
     font-weight: 700;
-    font-size: 1.01rem;
+    font-size: 0.9rem;
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
